--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,9 +1,10 @@
 ﻿@inject AuthenticationService AuthService
 @rendermode InteractiveServer
 
+
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">NL2SQL_Blazor</a>
+        <img src="gainwelllogo.png" alt="Gainwell Logo" style="height:40px; vertical-align:middle;" />
     </div>
 </div>
 
