--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -5,7 +5,7 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, @AuthService.CurrentUsername!</h1>
+<h1>Hello, @AuthService.CurrentUserRole!</h1>
 
 Welcome to Query Generator!
 
